--- a/kbayryakov/pom.xml
+++ b/kbayryakov/pom.xml
@@ -98,6 +98,17 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>4.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.224</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
