--- a/kbayryakov/src/main/resources/application.properties
+++ b/kbayryakov/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/kbayryakov?useSSL=false&allowP
 spring.datasource.username=root
 spring.datasource.password=12345678a
 #JPA Properties
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=TRUE
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
